Para deploy en Heroku

--- a/libreria/.env.example
+++ b/libreria/.env.example
@@ -1,6 +1,9 @@
+# ***** DATABASE ****
 DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
 DB_PORT=
 DB_NAME=
 DB_TEST=
+# ***** APIPERU https://docs.apiperu.dev/ ****
+APIPERU_TOKEN=
